[gd_scene load_steps=7 format=3 uid="uid://c4v80wbm6lca5"]

[ext_resource type="Texture2D" uid="uid://b02x7h4bntic6" path="res://icon.png" id="1_3miu1"]
[ext_resource type="Script" uid="uid://bejgc7t8weklg" path="res://scenes/ui/selection_panel/selection_panel.gd" id="1_u3ono"]
[ext_resource type="Texture2D" uid="uid://cproxhccob85g" path="res://assets/sprites/Players/Player_1.png" id="3_7k3kw"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_u3ono"]
bg_color = Color(0.12, 0.12, 0.12, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_info"]
bg_color = Color(0.18, 0.18, 0.18, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_btn"]
bg_color = Color(0.15, 0.5, 0.3, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_upgrade_btn"]
bg_color = Color(0.6, 0.4, 0.15, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="SelectionPanel" type="Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_u3ono")
script = ExtResource("1_u3ono")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 40

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="LeftPanel" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
theme_override_constants/separation = 8
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/LeftPanel"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
theme_override_colors/font_color = Color(0.9, 0.9, 0.9, 1)
text = "已选"
horizontal_alignment = 1

[node name="SelectedList" type="VBoxContainer" parent="MarginContainer/HBoxContainer/LeftPanel"]
layout_mode = 2
theme_override_constants/separation = 8
alignment = 1

[node name="SelectedPlayer1" type="Button" parent="MarginContainer/HBoxContainer/LeftPanel/SelectedList"]
custom_minimum_size = Vector2(110, 110)
layout_mode = 2

[node name="MainContent" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 8

[node name="TopSection" type="VBoxContainer" parent="MarginContainer/HBoxContainer/MainContent"]
custom_minimum_size = Vector2(0, 220)
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 1.0
theme_override_constants/separation = 0

[node name="InfoPanel" type="Panel" parent="MarginContainer/HBoxContainer/MainContent/TopSection"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_info")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer/MainContent/TopSection/InfoPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="PlayerInfo" type="HBoxContainer" parent="MarginContainer/HBoxContainer/MainContent/TopSection/InfoPanel/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 24

[node name="PlayerIco" type="TextureRect" parent="MarginContainer/HBoxContainer/MainContent/TopSection/InfoPanel/MarginContainer/PlayerInfo"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
size_flags_vertical = 0
texture = ExtResource("1_3miu1")
expand_mode = 1
stretch_mode = 6

[node name="RightContent" type="VBoxContainer" parent="MarginContainer/HBoxContainer/MainContent/TopSection/InfoPanel/MarginContainer/PlayerInfo"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 8

[node name="PlayerName" type="Label" parent="MarginContainer/HBoxContainer/MainContent/TopSection/InfoPanel/MarginContainer/PlayerInfo/RightContent"]
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "角色名称"

[node name="PlayerTies" type="Label" parent="MarginContainer/HBoxContainer/MainContent/TopSection/InfoPanel/MarginContainer/PlayerInfo/RightContent"]
modulate = Color(0.9, 0.75, 0.2, 1)
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "[羁绊]"

[node name="HSeparator" type="HSeparator" parent="MarginContainer/HBoxContainer/MainContent/TopSection/InfoPanel/MarginContainer/PlayerInfo/RightContent"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/HBoxContainer/MainContent/TopSection/InfoPanel/MarginContainer/PlayerInfo/RightContent"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="PlayerDescription" type="RichTextLabel" parent="MarginContainer/HBoxContainer/MainContent/TopSection/InfoPanel/MarginContainer/PlayerInfo/RightContent/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/normal_font_size = 18
bbcode_enabled = true
fit_content = true
text = "点击角色查看详情"

[node name="MiddleSection" type="VBoxContainer" parent="MarginContainer/HBoxContainer/MainContent"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 1.0
theme_override_constants/separation = 4
alignment = 0

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/MainContent/MiddleSection"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
theme_override_colors/font_color = Color(0.9, 0.9, 0.9, 1)
text = "选择角色"

[node name="PlayerContainerWrapper" type="Control" parent="MarginContainer/HBoxContainer/MainContent/MiddleSection"]
custom_minimum_size = Vector2(0, 260)
layout_mode = 2
size_flags_vertical = 3

[node name="PlayerContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer/MainContent/MiddleSection/PlayerContainerWrapper"]
layout_mode = 1
anchors_preset = 0
theme_override_constants/separation = 10

[node name="SecetionCard1" type="Button" parent="MarginContainer/HBoxContainer/MainContent/MiddleSection/PlayerContainerWrapper/PlayerContainer"]
custom_minimum_size = Vector2(120, 120)
layout_mode = 2
icon = ExtResource("3_7k3kw")

[node name="BottomSection" type="VBoxContainer" parent="MarginContainer/HBoxContainer/MainContent"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.8
theme_override_constants/separation = 4
alignment = 0

[node name="Label2" type="Label" parent="MarginContainer/HBoxContainer/MainContent/BottomSection"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
theme_override_colors/font_color = Color(0.9, 0.9, 0.9, 1)
text = "选择武器"

[node name="WeaponContainerWrapper" type="Control" parent="MarginContainer/HBoxContainer/MainContent/BottomSection"]
layout_mode = 2
size_flags_vertical = 3

[node name="WeaponContainer" type="GridContainer" parent="MarginContainer/HBoxContainer/MainContent/BottomSection/WeaponContainerWrapper"]
layout_mode = 1
anchors_preset = 0
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 10
columns = 16

[node name="SecetionCard" type="Button" parent="MarginContainer/HBoxContainer/MainContent/BottomSection/WeaponContainerWrapper/WeaponContainer"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2

[node name="RightPanel" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(220, 0)
layout_mode = 2
alignment = 1
theme_override_constants/separation = 16

[node name="Continue" type="Button" parent="MarginContainer/HBoxContainer/RightPanel"]
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
size_flags_vertical = 4
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_btn")
theme_override_styles/hover = SubResource("StyleBoxFlat_btn")
theme_override_styles/pressed = SubResource("StyleBoxFlat_btn")
text = "开始游戏"

[node name="UpgradeButton" type="Button" parent="MarginContainer/HBoxContainer/RightPanel"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_vertical = 4
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_upgrade_btn")
theme_override_styles/hover = SubResource("StyleBoxFlat_upgrade_btn")
theme_override_styles/pressed = SubResource("StyleBoxFlat_upgrade_btn")
text = "强化角色"
